--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -6,4 +8,5 @@
   border: none;
   font-size: 0.9rem;
   font-weight: 500;
+  font-family: 'Poppins', sans-serif;
 }
