--- a/src/pages/auth/signup/styles.css
+++ b/src/pages/auth/signup/styles.css
@@ -8,7 +8,7 @@
 
 .signup-form {
   width: 100%;
-  max-width: 350px;
+  /* max-width: 350px; */
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -23,17 +23,32 @@
   background-size: cover;
 }
 
-.signup-form > input {
-  height: 30px;
+.signup-form > div {
+  width: 100%;
+  display: flex;
+}
+.signup-form > div > input {
+  flex: 1;
+  height: 40px;
   border-radius: 4px;
   padding: 0 4px;
   background-color: white;
 }
 
+.signup-form > div > span {
+  flex: 1;
+  color: red;
+  font-size: 0.75rem;
+  margin-left: 8px;
+  padding: 8px;
+  border-radius: 4px;
+  height: 40px;
+}
 .signup-form > button {
   padding: 8px 16px;
   background-color: black;
   color: white;
   border-radius: 4px;
   cursor: pointer;
+  width: 120px;
 }
